updated swagger.yaml, normalized getting articles by category in query param & added limiting of getting articles
