# PDKSWebServer/Repositories/IArticleRepository.cs
@@ -8,8 +8,7 @@ namespace PDKSWebServer.Repositories
 {
     interface IArticleRepository
     {
-        IEnumerable<Article> GetArticles(User.UserRole role);
-        IEnumerable<Article> GetArticles(int categoryId, User.UserRole role);
+        IEnumerable<Article> GetArticles(int? categoryId, int? limit, User.UserRole? role);
         Article GetArticle(int id, User.UserRole role);
         int AddArticle(Article article);
         void UpdateArticle(Article article);
